--- a/onboarding/templates/onboarding/base.html
+++ b/onboarding/templates/onboarding/base.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-    <div class="allianceauth-onboarding-plugin container">
+    <div class="allianceauth-onboarding-plugin">
         {% block details %}{% endblock %}
     </div>
 {% endblock %}
