--- a/workflows/templates/workflows/base.html
+++ b/workflows/templates/workflows/base.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-    <div class="allianceauth-onboarding-plugin">
+    <div class="allianceauth-workflows">
         {% block details %}{% endblock %}
     </div>
 {% endblock %}
