--- a/workflows/templates/workflows/step.html
+++ b/workflows/templates/workflows/step.html
@@ -1,4 +1,4 @@
-{% extends 'onboarding/base.html' %}
+{% extends 'workflows/base.html' %}
 
 {% load i18n %}
 {% load humanize %}
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block header_nav_brand %}
-    Onboarding Wizard
+    Workflows
 {% endblock header_nav_brand %}
 
 {% block details %}
