--- a/workflows/templates/workflows/step.html
+++ b/workflows/templates/workflows/step.html
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                     </div>
-                    {% elif s.visibility %}
+                    {% elif s.visible %}
                     <div class="accordion_item">
                         <h2 class="accordion-header" id="h{{s.step.pk}}">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c{{s.step.pk}}" aria-expanded="false" aria-controls="c{{s.step.pk}}">
