--- a/workflows/templates/workflows/step.html
+++ b/workflows/templates/workflows/step.html
@@ -27,7 +27,7 @@
                         <h2 class="accordion-header" id="h{{s.step.pk}}">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#c{{s.step.pk}}" aria-expanded="true" aria-controls="c{{s.step.pk}}">
                                 {% if s.complete %} <i class="fa-solid fa-check fa-fw align-self-center me-3"></i> {% else %} <i class="fa-solid fa-circle-xmark fa-fw align-self-center me-3"></i> {% endif %}
-                                <div class="align-self-center me-3">{{ forloop.counter }}. {{s.step.name}}</div>
+                                <div class="align-self-center me-3">{{s.step.name}}</div>
                             </button>
                         </h2>
                         <div id="c{{s.step.pk}}" class="accordion-collapse collapse show" aria-labelledby="h{{s.step.pk}}" data-bs-parent="#onboardingSteps">
@@ -36,12 +36,12 @@
                             </div>
                         </div>
                     </div>
-                    {% else %}
+                    {% elif s.visible %}
                     <div class="accordion_item">
                         <h2 class="accordion-header" id="h{{s.step.pk}}">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c{{s.step.pk}}" aria-expanded="false" aria-controls="c{{s.step.pk}}">
                                 {% if s.complete %} <i class="fa-solid fa-check fa-fw align-self-center me-3"></i> {% else %} <i class="fa-solid fa-circle-xmark fa-fw align-self-center me-3"></i> {% endif %}
-                                <div class="align-self-center me-3">{{ forloop.counter }}. {{s.step.name}}</div>
+                                <div class="align-self-center me-3">{{s.step.name}}</div>
                             </button>
                         </h2>
                         <div id="c{{s.step.pk}}" class="accordion-collapse collapse" aria-labelledby="h{{s.step.pk}}" data-bs-parent="#onboardingSteps">
