--- a/workflows/templates/workflows/step.html
+++ b/workflows/templates/workflows/step.html
@@ -12,133 +12,138 @@
 {% endblock header_nav_brand %}
 
 {% block details %}
+<div class="container-fluid">
+  <div class="row mb-3">
+    <div class="col-12">
+      <h2 class="text-center">{{ wizard.name }}</h2>
+    </div>
+  </div>
 
-<div class="row">
-    <h2>{{ wizard.name }}</h2>
-</div>
-<div class="row">
-    <div class="col-3">
-        <div class="card">
-            <div class="card-body">
-                <div class="accordion accordion-flush" id="onboardingSteps">
-                    {% for s in steps %}
-                    {% if s.step.pk == current_step.step.pk %}
-                    <div class="accordion_item">
-                        <h2 class="accordion-header" id="h{{s.step.pk}}">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#c{{s.step.pk}}" aria-expanded="true" aria-controls="c{{s.step.pk}}">
-                                {% if s.complete %} <i class="fa-solid fa-check fa-fw align-self-center me-3"></i> {% else %} <i class="fa-solid fa-circle-xmark fa-fw align-self-center me-3"></i> {% endif %}
-                                <div class="align-self-center me-3">{{s.step.name}}</div>
-                            </button>
-                        </h2>
-                        <div id="c{{s.step.pk}}" class="accordion-collapse collapse show" aria-labelledby="h{{s.step.pk}}" data-bs-parent="#onboardingSteps">
-                            <div class="accordion-body">
-                                {{ s.step.description }}
-                            </div>
-                        </div>
-                    </div>
-                    {% elif s.visible %}
-                    <div class="accordion_item">
-                        <h2 class="accordion-header" id="h{{s.step.pk}}">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c{{s.step.pk}}" aria-expanded="false" aria-controls="c{{s.step.pk}}">
-                                {% if s.complete %} <i class="fa-solid fa-check fa-fw align-self-center me-3"></i> {% else %} <i class="fa-solid fa-circle-xmark fa-fw align-self-center me-3"></i> {% endif %}
-                                <div class="align-self-center me-3">{{s.step.name}}</div>
-                            </button>
-                        </h2>
-                        <div id="c{{s.step.pk}}" class="accordion-collapse collapse" aria-labelledby="h{{s.step.pk}}" data-bs-parent="#onboardingSteps">
-                            <div class="accordion-body">
-                                {{ s.step.description }}
-                            </div>
-                        </div>
-                    </div>
+  <div class="row">
+    <!-- Step Navigation -->
+    <div class="col-12 col-lg-3 mb-3">
+      <div class="card h-100">
+        <div class="card-body">
+          <div class="accordion accordion-flush" id="onboardingSteps">
+            {% for s in steps %}
+              {% if s.step.pk == current_step.step.pk %}
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="h{{s.step.pk}}">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#c{{s.step.pk}}" aria-expanded="true" aria-controls="c{{s.step.pk}}">
+                    {% if s.complete %}
+                      <i class="fa-solid fa-check fa-fw me-2"></i>
+                    {% else %}
+                      <i class="fa-solid fa-circle-xmark fa-fw me-2"></i>
                     {% endif %}
-                    {% endfor %}
+                    <span>{{ s.step.name }}</span>
+                  </button>
+                </h2>
+                <div id="c{{s.step.pk}}" class="accordion-collapse collapse show" aria-labelledby="h{{s.step.pk}}" data-bs-parent="#onboardingSteps">
+                  <div class="accordion-body">{{ s.step.description }}</div>
                 </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width:{{ total_pct_complete | floatformat:0 }}%" aria-valuenow="{{ total_pct_complete | floatformat:0 }}" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              {% elif s.visible %}
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="h{{s.step.pk}}">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c{{s.step.pk}}" aria-expanded="false" aria-controls="c{{s.step.pk}}">
+                    {% if s.complete %}
+                      <i class="fa-solid fa-check fa-fw me-2"></i>
+                    {% else %}
+                      <i class="fa-solid fa-circle-xmark fa-fw me-2"></i>
+                    {% endif %}
+                    <span>{{ s.step.name }}</span>
+                  </button>
+                </h2>
+                <div id="c{{s.step.pk}}" class="accordion-collapse collapse" aria-labelledby="h{{s.step.pk}}" data-bs-parent="#onboardingSteps">
+                  <div class="accordion-body">{{ s.step.description }}</div>
                 </div>
-            </div>
+              </div>
+              {% endif %}
+            {% endfor %}
+          </div>
+
+          <div class="progress mt-3">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:{{ total_pct_complete|floatformat:0 }}%" aria-valuenow="{{ total_pct_complete|floatformat:0 }}" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
         </div>
+      </div>
     </div>
-    <div class="col-6">
-        <div class="card card-primary">
-            <div class="card-header">
-                <div class="card-title"><h4 class="ms-auto me-auto">{% if current_step %}{{ current_step.step.name }}{% else %}Complete!{% endif %}</h4></div>
-            </div>
 
-            <div class="card-body">
-                <p class="card-text">{{ body_text | safe }}</p>
-            </div>
+    <!-- Main Content Full Width -->
+    <div class="col-12 col-lg-9 mb-3">
+      <div class="card h-100">
+        <div class="card-header text-center">
+          <h4>{% if current_step %}{{ current_step.step.name }}{% else %}Complete!{% endif %}</h4>
+        </div>
 
-            {% if current_step and current_step.step.is_selfguided %}
-            <div class="card-footer">
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <form method="POST">
-                        {% csrf_token %}
-                        <input type="hidden" name="s" value="{{ current_step.step.pk }}" />
-                        <input type="hidden" name="c" value="true" />
-                        <input type="submit" value="Continue" class="btn btn-primary btn-lg" />
-                    </form>
+        <div class="card-body">
+          <p class="card-text">{{ body_text | safe }}</p>
+        </div>
+
+        {% if current_step and current_step.step.is_selfguided %}
+        <div class="card-footer text-end">
+          <form method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="s" value="{{ current_step.step.pk }}" />
+            <input type="hidden" name="c" value="true" />
+            <input type="submit" value="Continue" class="btn btn-primary btn-lg" />
+          </form>
+        </div>
+
+        {% elif current_step %}
+        <div class="card-body">
+          <div class="accordion mb-3" id="check-accordion">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="checksHeader">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseChecks" aria-expanded="true" aria-controls="collapseChecks">
+                  Automated Checks
+                </button>
+              </h2>
+              <div id="collapseChecks" class="accordion-collapse collapse show" aria-labelledby="checksHeader" data-bs-parent="#check-accordion">
+                <div class="accordion-body p-0">
+                  <div class="table-responsive">
+                    <table class="table table-bordered table-sm mb-0">
+                      <thead class="table-light">
+                        <tr>
+                          <th>Status</th>
+                          <th>Name</th>
+                          <th>Description</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {% for check in current_step.checks %}
+                        <tr>
+                          <td>
+                            <button type="button" class="btn {% if check.is_complete %}btn-success{% else %}btn-danger{% endif %}">
+                              <i class="fa-solid {% if check.is_complete %}fa-check{% else %}fa-circle-xmark{% endif %} fa-fw"></i>
+                            </button>
+                          </td>
+                          <td>{{ check.check.name }}</td>
+                          <td>{{ check.check.description }}</td>
+                        </tr>
+                        {% endfor %}
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
+              </div>
             </div>
-            {% elif current_step %}
-            <div class="card-body">
-                <div class="accordion" id="check-accordion">
-                    <div class="accordion-item">
-                            <h2 class="accordion-header" id="checksHeader">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseChecks" aria-expanded="true" aria-controls="collapseChecks">
-                                    Automated Checks
-                                </button>
-                            </h2>
-                        </div>
-                        <div id="collapseChecks" class="accordion-collapse collapse show" aria-labelledby="checksHeader" data-bs-parent="#check-accordion">
-                            <div class="accordion-body">
-                                <table class="table">
-                                    <tr><th scope="col">Status</th><th scope="col">Name</th><th scope="col">Description</th></tr>
-                                    {% for check in current_step.checks %}
-                                    <tr>
-                                        <td>
-                                            {% if check.is_complete %}
-                                            <button type="button" class="btn btn-success"><i class="fa-solid fa-check fa-fw"></i></button>
-                                            {% else %}
-                                            <button type="button" class="btn btn-danger"><i class="fa-solid fa-circle-xmark fa-fw"></i></button>
-                                            {% endif %}
-                                        </td>
-                                        <th scope="row">
-                                            {{ check.check.name }}
-                                        </th>
-                                        <td>
-                                            {{ check.check.description }}
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                        <form method="POST">
-                            {% csrf_token %}
-                            <input type="submit" value="Refresh" class="btn btn-primary btn-lg" />
-                        </form>
-                    </div>
-                </div>
-                {% endif %}
-            </div>
+          </div>
+
+          <div class="card-footer text-end">
+            <form method="POST">
+              {% csrf_token %}
+              <input type="submit" value="Refresh" class="btn btn-primary btn-lg" />
+            </form>
+          </div>
+        </div>
+        {% endif %}
+      </div>
     </div>
-    <div class="col-3">
-    </div>            
+  </div>
 </div>
-
 {% endblock %}
 
-{% block extra_javascript %}
-{% endblock %}
-
-{% block extra_css %}
-{% endblock %}
-
-{% block extra_script %}
-
-{% endblock %}
+{% block extra_javascript %}{% endblock %}
+{% block extra_css %}{% endblock %}
+{% block extra_script %}{% endblock %}
